# compose

./: .gitignore  Cargo.toml  LICENSE
data/: frequency_dictionary_en_82_765.txt
src/: composition.rs  edit_distance.rs  lib.rs  suggestion.rs  symspell.rs  wordmaps.rs
