[package]
name = "compose"
version = "0.2.0"
edition = "2021"
description = "High efficiency spell correction and term candidate handling."
exclude = ["data/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rkyv = { version = "0.7.31", features = ["alloc", "hashbrown"] }

memmap2 = "0.5.2"
hashbrown = "0.12.1"
ahash = "0.7.6"
deunicode = "1.3.1"
triple_accel = "0.4.0"
anyhow = "1"
rayon = "1.5.1"