[package]
name = "compose"
version = "0.3.0"
edition = "2021"
description = "High efficiency spell correction and term candidate handling."
exclude = ["data/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rkyv = { version = "0.7.31", features = ["alloc", "validation", "strict"] }

bytecheck = "0.7.0"
memmap2 = "0.9.4"
ahash = "0.8.11"
deunicode = "1.6.0"
triple_accel = "0.4.0"